# GRDL-patrol

./: .gitmodules  README.md
ROS/GRDL/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ROS/GRDL/log/: latest_build
ROS/GRDL/src/grdl_description/: CMakeLists.txt  package.xml
ROS/GRDL/src/grdl_description/launch/: description.launch.py
ROS/GRDL/src/grdl_description/urdf/robots/: mecanum.urdf.xacro
ROS/GRDL/src/grdl_description/urdf/sensors/: generic_laser.urdf.xacro
ROS/GRDL/src/yhsung_description/: CMakeLists.txt  package.xml
ROS/GRDL/src/yhsung_description/launch/: display_urdf.launch.py  display_xacro.launch.py  launch_sim.launch.py  upload.launch.py
ROS/GRDL/src/yhsung_description/rviz/: urdf.rviz  xacro.rviz
ROS/GRDL/src/yhsung_description/urdf/: inertial_macros.xacro  oneday.urdf  robot.urdf.xacro  robot_core.xacro
